--- a/style.css
+++ b/style.css
@@ -135,6 +135,30 @@ section .title::after{
 .navbar.sticky .menu li a:hover{
     color: #fff;
 }
+.navbar .mode-btn{
+  background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+    padding: 2px;
+    cursor: pointer;
+    margin-left: 15vh;
+ 
+}
+.navbar .mode-btn:hover{
+    background-color: rgb(236, 182, 31);
+}
+
+.navbar .light-mode{
+
+    margin-top: 5px;
+}
+.navbar .dark-mode{
+   margin-top: 5px;
+}
+.hide{
+    display: none;
+}
 
 /* menu btn styling */
 .menu-btn{
@@ -308,6 +332,8 @@ section .title::after{
 
 .project-img{
     width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
 .services{
     color:#000000;
@@ -324,8 +350,10 @@ section .title::after{
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
+    height: 70vh;
     color: #ffffff;
     background: #222;
+    font-size: 1.8vh;
     text-align: center;
     border-radius: 6px;
     /* padding: 50px 25px; */
@@ -387,13 +415,6 @@ section .title::after{
 
 
 
-
-
-.services .serv-content .card i{
-    font-size: 50px;
-    color: rgb(236, 182, 31);
-    transition: color 0.3s ease;
-}
 .services .serv-content .card:hover i{
     color: #fff;
 }
@@ -405,11 +426,12 @@ section .title::after{
 
 .visit-btn{
     border: none;
-    border-radius: 2px;
+    border-radius: 5px;
     padding: 3px;
     cursor: pointer;
     position: absolute;
     margin-left: 6%;
+    background-color: yellow;
    
 }
 
